[tool.poetry]
name = "wbdata"
version = "0.3.0.post"
description = "A library to access World Bank data"
authors = ["Oliver Sherouse <oliver@oliversherouse.com>"]
license = "GPL-2.0+"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

repository = "https://github.com/OliverSherouse/wbdata"
documentation = "https://wbdata.readthedocs.io/"
keywords = ["World Bank", "data", "economics"]

[tool.poetry.dependencies]
python = ">=3.6"
decorator = ">=4.0"
requests = ">=2.0"
tabulate = ">=0.8.5"
appdirs = ">=1.4"

pandas = {version = ">=0.17", optional=true}
sphinx = {version = "^3.0.3", optional=true}
recommonmark = {version = "^0.6.0", optional=true}
ipython = {version = "^7.16.1", optional=true}

[tool.poetry.extras]
pandas = ["pandas"]
docs = ["sphinx", "recommonmark", "ipython"]

[tool.poetry.dev-dependencies]
pytest-flake8 = "^=1.0.6"
ipython = "^=7.16.1"
flake8-bugbear = "^20.1.4"
sphinx = "^3.0.3"
recommonmark = "^0.6.0"
flake8 = "^3.8.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
