
[project]
name = "wbdata"
version = "1.1.0"
description = "A library to access World Bank data"
readme = "README.md"
license = {text = "GPL-2.0+"}
requires-python = ">=3.10,<4"
authors = [
    {name = "Oliver Sherouse", email = "oliver@oliversherouse.com"},
]
keywords = ["World Bank", "data", "economics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.0,<3",
    "tabulate>=0.8.5,<1",
    "appdirs>=1.4,<2",
    "cachetools>=5.3.2,<6",
    "shelved-cache>=0.3.1,<0.4",
    "backoff>=2.2.1,<3",
    "dateparser>=1.2.0,<2",
    "decorator>=5.1.1,<6",
]

[project.optional-dependencies]
pandas = ["pandas>=1,<3"]
docs = [
    "mkdocs>=1.5.3,<2",
    "mkdocstrings[python]>=0.30,<1",
]

[project.urls]
Repository = "https://github.com/OliverSherouse/wbdata"
Documentation = "https://wbdata.readthedocs.io/"

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8",
    "pytest-cov>=4.1.0,<5",
    "types-cachetools>=5.3.0.7,<6",
    "types-tabulate>=0.9.0.20240106,<0.10",
    "types-decorator>=5.1.8.20240106,<5.2",
    "types-appdirs>=1.4.3.5,<1.5",
    "types-requests>=2.31.0.20240106,<2.32",
    "types-dateparser>=1.1.4.20240106,<1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
